# bookwyrm

./: Dockerfile  bump-version.sh  bw-dev  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: container.yml  python.yml
bookwyrm/: settings.py
bookwyrm/connectors/: openlibrary.py
bookwyrm/management/commands/: show_duplicate_authors.py
bookwyrm/migrations/: 0066_user_deactivation_reason_squashed_0214_alter_edition_shelves_alter_list_books_and_more.py  0230_alter_seriesbook_unique_together_and_more.py
bookwyrm/models/: book.py
bookwyrm/tests/connectors/: test_openlibrary_connector.py
bookwyrm/tests/data/: ol_series_edition.json
dev-tools/: Dockerfile
nginx/: https.conf
postgres-docker/: backup.sh
